# seafront

./: .gitignore  MICROSCOPE_NETWORK.md  README.md  index.html  jsconfig.json  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  reset.css  run.sh  seafront.sublime-project  server.py  toupcam_test.py  toupcamsdkexample.py
.claude/: settings.local.json
css/: basics.css  live_view.css  main.css  plot.css  separator.css  site_selection.css  well_navigator.css
examples/: mock_config.json  squid+_config.json  squid-v1.json  squid-v2.json  squid-v3.json  squid-v4.json  squid_config.json
install/: all.sh  galaxy_camera_fix_usb_memory.sh  related_utilities.sh  teensyduino_udev_rules.sh  toupcam_camera.sh  uv.sh
python_env/: activate.sh  deactivate.sh  install.sh
scripts/: check.py  generate_default_protocol.py  inspect_ome_metadata.py  list_squid_cameras.py  list_squid_hardware.py  search_logs.py  test_filter_wheel_hardware.py  toupcam_probe.py  toupcam_temperature_hist_compare.py
scripts/laf/: acquisition.py  benchmark.py  calibration.py  client.py  data_types.py  make_laf_gifs.py  multisite.py  run_zstack_benchmark_preset.sh  test_positions.json  zstack_benchmark.py
scripts/laf/trackers/: base.py  cnn.py  cross_correlation.py  peak_based.py  squid.py
seafront/: README.md  __main__.py  debug_introspect.py  index.html  logger.py
seafront/config/: basics.py  core_config.py  handles.py  registry.py
seafront/css/: basics.css  grid_view.css  live_view.css  main.css  modal.css  plate_observer.css  plot.css  reset.css  section.css  separator.css  site_selection.css  style.css  tabs.css  theme.css  tooltip.css  well_navigator.css
seafront/hardware/: adapter.py  camera.py  config_handles.py  firmware_config.py  forbidden_areas.py  galaxy_camera.py  illumination.py  microcontroller.py  microscope.py  mock_microscope.py  squid.py  toupcam_camera.py
seafront/hardware/camera/: __init__.py  camera.py  galaxy_camera.py  mock_camera.py  toupcam_camera.py
seafront/hardware/microcontroller/: __init__.py  microcontroller.py  teensy_microcontroller.py
seafront/p/: reset.css  style.css
seafront/server/: commands.py  protocol.py  worker.py
seafront/src/: acquisition.js  autofocus_debug.js  channel_snapshot.js  configio.js  control_camera_acquisition.js  docLinks.js  drag_separator.js  grid_view.js  hardware_config_menu.js  histogram.js  histogram_worker.js  image2imagedata_worker.js  immediate_move_stage.js  init.js  laser_autofocus.js  laser_autofocus_debug.js  loading_position.js  messagebox.js  modal.js  plate_observer.js  plot.js  seafront_types.js  site_selection.js  well_navigator.js
seafront/web-static/: index.html
seafront/web-static/css/: theme.css  tooltip.css
seafront/web-static/src/: alpine-methods.js  api-client.js  channelview.js  config-storage.js  histogram.js  init.js  local-storage.js  mock-api-client.js  namespace-parser.js  numberinput.js  platenavigator.js  tooltip.js
seafront/web-static/src/types/: plotly.d.ts  seafront.d.ts  three.d.ts
src/: drag.js  histogram.js  init.js  modal.js  plot.js  site_selection.js  tab.js  tooltip.js  well_navigator.js
stubs/gxipy/: __init__.pyi  gxiapi.pyi
stubs/toupcam/: __init__.pyi  toupcam.pyi
tests/: __init__.py  conftest.py  test_api_operations.py  test_concurrency.py  test_config_integration.py  test_config_registry.py  test_example_configs.py  test_generate_default_protocol.py  test_microcontroller_abstraction.py  test_mock_microscope.py  test_server_startup.py  test_worker.py
