[project]
name="seafront"
version="0.2.0"
authors=[
    {name="Patrick Hennig",email="patrick.hennig@uu.se"}
]
dependencies = [
    "gxipy@git+https://github.com/slaide/daheng-imaging-gxipy", # camera API
    "seaconfig@git+https://github.com/slaide/seafront-config@a61c79a1df4c98479c4c85ee7170dedc9ad01ead", # configuration file handling
    "pyserial==3.5", # for microcontroller communication
    "crc>=1.3,<1.4", # for basic microcontroller packet communication
    "pillow>=11.1,<11.2", # for image format conversion to store to disk/send to client for display
    "scipy>=1.15,<1.16", # for laser aufocus system signal processing
    "numpy>=2,<3", # for signal processing and various math
    "tifffile==2025.1.10", # for tiff image format
    "imagecodecs==2024.12.30", # for image compression
    "matplotlib>=3,<4", # for debug functionality
    "fastapi==0.115.8", # http server
    "uvicorn>=0.34,<0.35", # to run the fastapi http server
    "websockets>=14.2,<14.3", # to enable uvicorn websocket capabilities
    "pydantic>=2.9,<2.10", # python type model verification
    "ome-types", # for ome info in image files
    "opencv-python>=4.11,<4.12", # fast gaussian blur for noise autofocus images
    "loguru==0.7.3", # logging
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["seafront"]
